# reqtools

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
mock_server/: main.py  server.py
reqtools/: __init__.py  magics.py
reqtools/extension/: magics.py  reqtools.py
reqtools/extension/http/: utils.py
reqtools/http/: display.py  utils.py
reqtools/jq/: processor.py
tests/: conftest.py
tests/integration/: test_extension_loading.py  test_jq_integration.py  test_magics.py
tests/mock_server/: test_echo.py
tests/server/: test_echo.py
tests/unit/: test_http_display.py  test_http_utils.py  test_init.py  test_jq_processor.py  test_magics_private.py
