[project]
name = "magic-reqtools"
version = "0.2.0"
description = "IPython magics and helpers for working with HTTP requests"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # IPython 8.0+ requires Python ≥3.8; 9.x is fine for ≥3.10 but don’t force latest
    "ipython>=8.0",
    # jq Python bindings are thin, version floor just ensures modern build
    "jq>=1.0.0",
    # requests 2.28.0+ supports Python ≥3.7 and is stable for ≥3.10
    "requests>=2.28",
    # uncurl is pinned to its latest published (no typeshed)
    "uncurl>=0.0.11",
]

[dependency-groups]
dev = [
    # Use current stable dev tools, but don’t lock to only 2025 releases
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "bump-my-version>=1.0.0",
    # type stubs
    "types-requests>=2.28.0.0",
    "responses>=0.25.8",
]

[tool.bumpversion]
current_version = "0.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.isort]
profile = "black"
known_third_party = ["pytest", "responses"]
